--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>The Outreach Project — Resource Network</title>
   <link rel="stylesheet" href="./styles.css" />
+  <link rel="manifest" href="/manifest.json">
+<link rel="apple-touch-icon" href="/assets/icon-1024.png">
+<meta name="theme-color" content="#0f172a">
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
   <!-- tiny helper style so icons look right even if your CSS doesn't have it yet -->
   <style>
