V2 slow down update

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
           <button class="actionBtn" id="actionPodcast" type="button">
             <span class="actionIcon">🎙️</span>
             <span class="actionText">
-              <span class="actionTitle">TOP Podcast</span>
+              <span class="actionTitle">Podcast</span>
               <span class="actionDesc">Listen and meet the organizations behind the mission.</span>
             </span>
           </button>
